lab2_code/syntax.output
Terminals which are not used

   PLUSASSIGN
   MINUSASSIGN
   MULASSIGN
   DIVASSIGN


Grammar

    0 $accept: CompUnit $end

    1 CompUnit: CompUnit Decl
    2         | CompUnit FuncDef
    3         | Decl
    4         | FuncDef

    5 Number: IntConst

    6 UnaryOp: PLUS
    7        | MINUS
    8        | NOT

    9 Decl: ConstDecl
   10     | VarDecl

   11 ConstDecl: CONST INT ConstDef MutiConstDecl SEMICOLON

   12 MutiConstDecl: MutiConstDecl COMMA ConstDef
   13              | /* empty */

   14 ConstDef: Ident ArrDimDef ASSIGN ConstInitVal

   15 ArrDimDef: ArrDimDef LSQUBRAKT ConstExp RSQUBRAKT
   16          | /* empty */

   17 ConstInitVal: ConstExp
   18             | LBRACE ConstInitVal ConstArrInitVal RBRACE

   19 ConstArrInitVal: ConstArrInitVal COMMA ConstInitVal
   20                | /* empty */

   21 VarDecl: INT VarDef MutiVarDecl SEMICOLON

   22 MutiVarDecl: MutiVarDecl COMMA VarDef
   23            | /* empty */

   24 VarDef: Ident ArrDimDef
   25       | Ident ArrDimDef ASSIGN InitVal

   26 InitVal: Exp
   27        | LBRACE RBRACE
   28        | LBRACE InitVal ArrInitVal RBRACE

   29 ArrInitVal: ArrInitVal COMMA InitVal
   30           | /* empty */

   31 FuncDef: INT Ident LPAREN FuncFParams RPAREN Block
   32        | VOID Ident LPAREN FuncFParams RPAREN Block
   33        | INT Ident LPAREN RPAREN Block
   34        | VOID Ident LPAREN RPAREN Block

   35 FuncFParams: FuncFParam MutiFParams

   36 MutiFParams: MutiFParams COMMA FuncFParam
   37            | /* empty */

   38 FuncFParam: INT Ident
   39           | INT Ident LSQUBRAKT RSQUBRAKT ArrParam

   40 ArrParam: ArrParam LSQUBRAKT Exp RSQUBRAKT
   41         | /* empty */

   42 FuncRParams: Exp MutiRParams

   43 MutiRParams: MutiRParams COMMA Exp
   44            | /* empty */

   45 Block: LBRACE MutiBI RBRACE

   46 MutiBI: MutiBI BlockItem
   47       | /* empty */

   48 BlockItem: Decl
   49          | Stmt

   50 Stmt: LVal ASSIGN Exp SEMICOLON
   51     | Exp SEMICOLON
   52     | Block
   53     | IF LPAREN Cond RPAREN Stmt ELSE Stmt
   54     | IF LPAREN Cond RPAREN Stmt
   55     | WHILE LPAREN Cond RPAREN Stmt
   56     | BREAK SEMICOLON
   57     | CONTINUE SEMICOLON
   58     | RETURN Exp SEMICOLON
   59     | RETURN SEMICOLON
   60     | BlankStmt

   61 BlankStmt: SEMICOLON

   62 Exp: AddExp

   63 Cond: LOrExp

   64 LVal: Ident ArrParam

   65 PrimaryExp: LPAREN Exp RPAREN
   66           | LVal
   67           | Number

   68 UnaryExp: PrimaryExp
   69         | Ident LPAREN FuncRParams RPAREN
   70         | Ident LPAREN RPAREN
   71         | UnaryOp UnaryExp

   72 MulExp: UnaryExp
   73       | MulExp MUL UnaryExp
   74       | MulExp DIV UnaryExp
   75       | MulExp MOD UnaryExp

   76 AddExp: MulExp
   77       | AddExp PLUS MulExp
   78       | AddExp MINUS MulExp

   79 RelExp: AddExp
   80       | RelExp LES AddExp
   81       | RelExp GRA AddExp
   82       | RelExp LESEQ AddExp
   83       | RelExp GRAEQ AddExp

   84 EqExp: RelExp
   85      | EqExp EQ RelExp
   86      | EqExp NEQ RelExp

   87 LAndExp: EqExp
   88        | LAndExp AND EqExp

   89 LOrExp: LAndExp
   90       | LOrExp OR LAndExp

   91 ConstExp: AddExp


Terminals, with rules where they appear

$end (0) 0
error (256)
Ident (258) 14 24 25 31 32 33 34 38 39 64 69 70
VOID (259) 32 34
INT (260) 11 21 31 33 38 39
CONST (261) 11
IF (262) 53 54
ELSE (263) 53
WHILE (264) 55
BREAK (265) 56
CONTINUE (266) 57
RETURN (267) 58 59
LPAREN (268) 31 32 33 34 53 54 55 65 69 70
RPAREN (269) 31 32 33 34 53 54 55 65 69 70
LBRACE (270) 18 27 28 45
RBRACE (271) 18 27 28 45
LSQUBRAKT (272) 15 39 40
RSQUBRAKT (273) 15 39 40
SEMICOLON (274) 11 21 50 51 56 57 58 59 61
COMMA (275) 12 19 22 29 36 43
IntConst (276) 5
EQ (277) 85
GRAEQ (278) 83
LESEQ (279) 82
NEQ (280) 86
GRA (281) 81
LES (282) 80
PLUS (283) 6 77
MINUS (284) 7 78
MUL (285) 73
DIV (286) 74
MOD (287) 75
AND (288) 88
OR (289) 90
NOT (290) 8
ASSIGN (291) 14 25 50
PLUSASSIGN (292)
MINUSASSIGN (293)
MULASSIGN (294)
DIVASSIGN (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
CompUnit (42)
    on left: 1 2 3 4, on right: 0 1 2
Number (43)
    on left: 5, on right: 67
UnaryOp (44)
    on left: 6 7 8, on right: 71
Decl (45)
    on left: 9 10, on right: 1 3 48
ConstDecl (46)
    on left: 11, on right: 9
MutiConstDecl (47)
    on left: 12 13, on right: 11 12
ConstDef (48)
    on left: 14, on right: 11 12
ArrDimDef (49)
    on left: 15 16, on right: 14 15 24 25
ConstInitVal (50)
    on left: 17 18, on right: 14 18 19
ConstArrInitVal (51)
    on left: 19 20, on right: 18 19
VarDecl (52)
    on left: 21, on right: 10
MutiVarDecl (53)
    on left: 22 23, on right: 21 22
VarDef (54)
    on left: 24 25, on right: 21 22
InitVal (55)
    on left: 26 27 28, on right: 25 28 29
ArrInitVal (56)
    on left: 29 30, on right: 28 29
FuncDef (57)
    on left: 31 32 33 34, on right: 2 4
FuncFParams (58)
    on left: 35, on right: 31 32
MutiFParams (59)
    on left: 36 37, on right: 35 36
FuncFParam (60)
    on left: 38 39, on right: 35 36
ArrParam (61)
    on left: 40 41, on right: 39 40 64
FuncRParams (62)
    on left: 42, on right: 69
MutiRParams (63)
    on left: 43 44, on right: 42 43
Block (64)
    on left: 45, on right: 31 32 33 34 52
MutiBI (65)
    on left: 46 47, on right: 45 46
BlockItem (66)
    on left: 48 49, on right: 46
Stmt (67)
    on left: 50 51 52 53 54 55 56 57 58 59 60, on right: 49 53 54 55
BlankStmt (68)
    on left: 61, on right: 60
Exp (69)
    on left: 62, on right: 26 40 42 43 50 51 58 65
Cond (70)
    on left: 63, on right: 53 54 55
LVal (71)
    on left: 64, on right: 50 66
PrimaryExp (72)
    on left: 65 66 67, on right: 68
UnaryExp (73)
    on left: 68 69 70 71, on right: 71 72 73 74 75
MulExp (74)
    on left: 72 73 74 75, on right: 73 74 75 76 77 78
AddExp (75)
    on left: 76 77 78, on right: 62 77 78 79 80 81 82 83 91
RelExp (76)
    on left: 79 80 81 82 83, on right: 80 81 82 83 84 85 86
EqExp (77)
    on left: 84 85 86, on right: 85 86 87 88
LAndExp (78)
    on left: 87 88, on right: 88 89 90
LOrExp (79)
    on left: 89 90, on right: 63 90
ConstExp (80)
    on left: 91, on right: 15 17


state 0

    0 $accept: . CompUnit $end

    VOID   shift, and go to state 1
    INT    shift, and go to state 2
    CONST  shift, and go to state 3

    CompUnit   go to state 4
    Decl       go to state 5
    ConstDecl  go to state 6
    VarDecl    go to state 7
    FuncDef    go to state 8


state 1

   32 FuncDef: VOID . Ident LPAREN FuncFParams RPAREN Block
   34        | VOID . Ident LPAREN RPAREN Block

    Ident  shift, and go to state 9


state 2

   21 VarDecl: INT . VarDef MutiVarDecl SEMICOLON
   31 FuncDef: INT . Ident LPAREN FuncFParams RPAREN Block
   33        | INT . Ident LPAREN RPAREN Block

    Ident  shift, and go to state 10

    VarDef  go to state 11


state 3

   11 ConstDecl: CONST . INT ConstDef MutiConstDecl SEMICOLON

    INT  shift, and go to state 12


state 4

    0 $accept: CompUnit . $end
    1 CompUnit: CompUnit . Decl
    2         | CompUnit . FuncDef

    $end   shift, and go to state 13
    VOID   shift, and go to state 1
    INT    shift, and go to state 2
    CONST  shift, and go to state 3

    Decl       go to state 14
    ConstDecl  go to state 6
    VarDecl    go to state 7
    FuncDef    go to state 15


state 5

    3 CompUnit: Decl .

    $default  reduce using rule 3 (CompUnit)


state 6

    9 Decl: ConstDecl .

    $default  reduce using rule 9 (Decl)


state 7

   10 Decl: VarDecl .

    $default  reduce using rule 10 (Decl)


state 8

    4 CompUnit: FuncDef .

    $default  reduce using rule 4 (CompUnit)


state 9

   32 FuncDef: VOID Ident . LPAREN FuncFParams RPAREN Block
   34        | VOID Ident . LPAREN RPAREN Block

    LPAREN  shift, and go to state 16


state 10

   24 VarDef: Ident . ArrDimDef
   25       | Ident . ArrDimDef ASSIGN InitVal
   31 FuncDef: INT Ident . LPAREN FuncFParams RPAREN Block
   33        | INT Ident . LPAREN RPAREN Block

    LPAREN  shift, and go to state 17

    $default  reduce using rule 16 (ArrDimDef)

    ArrDimDef  go to state 18


state 11

   21 VarDecl: INT VarDef . MutiVarDecl SEMICOLON

    $default  reduce using rule 23 (MutiVarDecl)

    MutiVarDecl  go to state 19


state 12

   11 ConstDecl: CONST INT . ConstDef MutiConstDecl SEMICOLON

    Ident  shift, and go to state 20

    ConstDef  go to state 21


state 13

    0 $accept: CompUnit $end .

    $default  accept


state 14

    1 CompUnit: CompUnit Decl .

    $default  reduce using rule 1 (CompUnit)


state 15

    2 CompUnit: CompUnit FuncDef .

    $default  reduce using rule 2 (CompUnit)


state 16

   32 FuncDef: VOID Ident LPAREN . FuncFParams RPAREN Block
   34        | VOID Ident LPAREN . RPAREN Block

    INT     shift, and go to state 22
    RPAREN  shift, and go to state 23

    FuncFParams  go to state 24
    FuncFParam   go to state 25


state 17

   31 FuncDef: INT Ident LPAREN . FuncFParams RPAREN Block
   33        | INT Ident LPAREN . RPAREN Block

    INT     shift, and go to state 22
    RPAREN  shift, and go to state 26

    FuncFParams  go to state 27
    FuncFParam   go to state 25


state 18

   15 ArrDimDef: ArrDimDef . LSQUBRAKT ConstExp RSQUBRAKT
   24 VarDef: Ident ArrDimDef .
   25       | Ident ArrDimDef . ASSIGN InitVal

    LSQUBRAKT  shift, and go to state 28
    ASSIGN     shift, and go to state 29

    $default  reduce using rule 24 (VarDef)


state 19

   21 VarDecl: INT VarDef MutiVarDecl . SEMICOLON
   22 MutiVarDecl: MutiVarDecl . COMMA VarDef

    SEMICOLON  shift, and go to state 30
    COMMA      shift, and go to state 31


state 20

   14 ConstDef: Ident . ArrDimDef ASSIGN ConstInitVal

    $default  reduce using rule 16 (ArrDimDef)

    ArrDimDef  go to state 32


state 21

   11 ConstDecl: CONST INT ConstDef . MutiConstDecl SEMICOLON

    $default  reduce using rule 13 (MutiConstDecl)

    MutiConstDecl  go to state 33


state 22

   38 FuncFParam: INT . Ident
   39           | INT . Ident LSQUBRAKT RSQUBRAKT ArrParam

    Ident  shift, and go to state 34


state 23

   34 FuncDef: VOID Ident LPAREN RPAREN . Block

    LBRACE  shift, and go to state 35

    Block  go to state 36


state 24

   32 FuncDef: VOID Ident LPAREN FuncFParams . RPAREN Block

    RPAREN  shift, and go to state 37


state 25

   35 FuncFParams: FuncFParam . MutiFParams

    $default  reduce using rule 37 (MutiFParams)

    MutiFParams  go to state 38


state 26

   33 FuncDef: INT Ident LPAREN RPAREN . Block

    LBRACE  shift, and go to state 35

    Block  go to state 39


state 27

   31 FuncDef: INT Ident LPAREN FuncFParams . RPAREN Block

    RPAREN  shift, and go to state 40


state 28

   15 ArrDimDef: ArrDimDef LSQUBRAKT . ConstExp RSQUBRAKT

    Ident     shift, and go to state 41
    LPAREN    shift, and go to state 42
    IntConst  shift, and go to state 43
    PLUS      shift, and go to state 44
    MINUS     shift, and go to state 45
    NOT       shift, and go to state 46

    Number      go to state 47
    UnaryOp     go to state 48
    LVal        go to state 49
    PrimaryExp  go to state 50
    UnaryExp    go to state 51
    MulExp      go to state 52
    AddExp      go to state 53
    ConstExp    go to state 54


state 29

   25 VarDef: Ident ArrDimDef ASSIGN . InitVal

    Ident     shift, and go to state 41
    LPAREN    shift, and go to state 42
    LBRACE    shift, and go to state 55
    IntConst  shift, and go to state 43
    PLUS      shift, and go to state 44
    MINUS     shift, and go to state 45
    NOT       shift, and go to state 46
